--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
               alt="logo coffee"
               width="40px"
               height="40px"
+              style="border-radius: 90%"
             />
             <h2>coffee</h2>
           </a>
@@ -48,7 +49,11 @@
             </div>
           </div>
           <div class="image-section">
-            <img src="./images/image-coffee.jpg" alt="bluo" />
+            <img
+              src="./images/back2.jpg"
+              alt="bluo"
+              style="border-radius: 90%"
+            />
           </div>
         </div>
       </div>
